--- a/src/Components/cart/cart.css
+++ b/src/Components/cart/cart.css
@@ -37,7 +37,7 @@
     cursor: pointer;
 }
 .cart_btn .cart_btn1{
-    background-color:#FFD814;
+    background-color:#59bfd8;
     border: none;
     outline: none;
     border-radius: 20px;
@@ -53,7 +53,7 @@
 }
 
 .cart_btn .cart_btn2{
-    background-color: #FFA41C;
+    background-color: #25b23d;
     letter-spacing: .5px;
     font-size: 14px;
     color: #0F1111;
@@ -65,12 +65,12 @@
 }
 
 .cart_btn .cart_btn2:hover{
-    background-color: #ec9615;
+    background-color: #b9b42b;
 }
 
 .cart_container .right_cart{
     flex: 0.5;
-    border: 1px solid #c4c4c4;
+    border: 1px solid #ef9a9a;
     padding: 10px;
     border-radius: 4px;
 }
