--- a/src/Components/buynow/buynow.css
+++ b/src/Components/buynow/buynow.css
@@ -3,7 +3,7 @@
     min-height:50vh;
     position: relative;
     top: 60px;
-    background-color: #EAEDED!important;
+    background-color:#B7B6D6!important;
 }
 
 .buynow_section .buynow_container{  
@@ -15,7 +15,7 @@
 
 .buynow_container .left_buy{
     flex: .7;
-    background-color: #fff;
+    background-color: #eacbcbdf;
     padding: 10px 20px;
     border-radius: 2px;
 }
@@ -124,7 +124,7 @@
 }
 
 .buynow_container .right_buy .cost_right{
-    background-color: #fff;
+    background-color: hwb(310 66% 20%);
     padding: 10px 20px;
     margin-top: 10px;
     min-height: 250px;
