--- a/src/Components/header/navbaar.css
+++ b/src/Components/header/navbaar.css
@@ -1,5 +1,5 @@
 header{
-    background-color: #131921;
+    background-color: #b11313;
     width:100%;
     height: 60px;
     position: fixed;
@@ -45,7 +45,7 @@ header nav .left input{
 }
 
 header nav .left .search_icon{
-    background-color: #febd69;
+    background-color: #4ad65c;
     height: 38px;
     width: 40px;
     display: flex;
