--- a/src/Components/home/slide.css
+++ b/src/Components/home/slide.css
@@ -2,7 +2,7 @@
     /* padding: 10px 20px; */
     width: 98%;
     margin:10px auto;
-    background-color: #fff;
+    background-color: #cbcbc9;
     border-radius: 4px;
 }
 
@@ -22,7 +22,7 @@
     flex-direction: column;
     justify-content:space-evenly;
     align-items: center;
-    background-color: #fff;
+    background-color:#CBCBC9;
     border-radius: 4px;
 }
 
